--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "funding": "https://github.com/sponsors/dword-design",
   "license": "MIT",
   "author": "Sebastian Landwehr <info@sebastianlandwehr.com>",
+  "type": "module",
+  "exports": "./dist/index.js",
   "main": "dist/index.js",
   "files": [
     "dist"
@@ -12,6 +14,7 @@
   "scripts": {
     "checkUnknownFiles": "base checkUnknownFiles",
     "commit": "base commit",
+    "depcheck": "base depcheck",
     "dev": "base dev",
     "lint": "base lint",
     "prepare": "base prepare",
@@ -22,15 +25,15 @@
     "with-local-tmp-dir": "^4.0.0"
   },
   "devDependencies": {
-    "@dword-design/base": "^8.0.0",
+    "@dword-design/base": "^9.2.0",
     "@dword-design/functions": "^4.0.0",
     "@dword-design/tester": "^2.0.0",
     "depcheck-package-name": "^2.0.0",
     "execa": "^5.0.0",
-    "fs-extra": "^10.0.0"
+    "output-files": "^2.0.10"
   },
   "engines": {
-    "node": ">=12"
+    "node": ">=14"
   },
   "publishConfig": {
     "access": "public"
